Archive2/2a/2cb060552782eb/output
main.cpp: In function 'int main()':
main.cpp:14:10: error: aggregate 'std::ofstream myfile' has incomplete type and cannot be defined
 ofstream myfile;
          ^
main.cpp:9:5: warning: unused variable 'z' [-Wunused-variable]
 int z = 0;
     ^
